--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>现代静态页面</title>
+  <title>Welcome to my GitHubPage</title>
   <style>
     * {
       margin: 0;
