--- a/index.html
+++ b/index.html
@@ -203,39 +203,39 @@
 
   <section class="hero" id="home">
     <div class="container">
-      <h1>欢迎来到我的网站</h1>
-      <p>一个现代、美观、响应式的静态页面示例</p>
-      <a href="#features" class="btn">了解更多</a>
+      <h1>Welcome to my GitHubPage</h1>
+      <p>A modern, beautiful, and responsive static page example</p>
+      <a href="#features" class="btn">Learn More</a>
     </div>
   </section>
 
   <section class="features" id="features">
     <div class="container">
-      <h2>核心特性</h2>
+      <h2>Main Features</h2>
       <div class="features-grid">
         <div class="feature-card">
-          <h3>响应式设计</h3>
-          <p>完美适配各种设备，从手机到桌面电脑，提供一致的用户体验。</p>
+          <h3>Responsive Design</h3>
+          <p>Perfectly adapts to various devices, providing a consistent user experience from mobile to desktop.</p>
         </div>
         <div class="feature-card">
-          <h3>现代UI</h3>
-          <p>采用最新的设计趋势，渐变色彩、圆角卡片、流畅动画。</p>
+          <h3>Modern UI</h3>
+          <p>Adopts the latest design trends, with gradient colors, rounded cards, and smooth animations.</p>
         </div>
         <div class="feature-card">
-          <h3>高性能</h3>
-          <p>纯静态页面，加载速度快，无需复杂的构建工具。</p>
+          <h3>High Performance</h3>
+          <p>Purely static pages, fast loading speed, no complex build tools required.</p>
         </div>
         <div class="feature-card">
-          <h3>易于定制</h3>
-          <p>清晰的代码结构，方便根据需求进行修改和扩展。</p>
+          <h3>Easy Customization</h3>
+          <p>Clear code structure, easy to modify and extend according to requirements.</p>
         </div>
         <div class="feature-card">
-          <h3>SEO友好</h3>
-          <p>语义化的HTML结构，有利于搜索引擎优化。</p>
+          <h3>SEO Friendly</h3>
+          <p>Semantic HTML structure, beneficial for search engine optimization.</p>
         </div>
         <div class="feature-card">
-          <h3>无依赖</h3>
-          <p>纯HTML和CSS，无需任何外部库或框架。</p>
+          <h3>No Dependencies</h3>
+          <p>Pure HTML and CSS, no external libraries or frameworks required.</p>
         </div>
       </div>
     </div>
@@ -246,19 +246,19 @@
       <div class="stats-grid">
         <div class="stat-item">
           <h3>100%</h3>
-          <p>响应式</p>
+          <p>Responsive</p>
         </div>
         <div class="stat-item">
           <h3>0</h3>
-          <p>外部依赖</p>
+          <p>No External Dependencies</p>
         </div>
         <div class="stat-item">
           <h3>∞</h3>
-          <p>可能性</p>
+          <p>Possibilities</p>
         </div>
         <div class="stat-item">
           <h3>24/7</h3>
-          <p>在线支持</p>
+          <p>Online Support</p>
         </div>
       </div>
     </div>
@@ -266,7 +266,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2024 我的网站. 保留所有权利.</p>
+      <p>&copy; 2024 Welcome to my GitHubPage. All rights reserved.</p>
     </div>
   </footer>
 </body>
