--- a/index.html
+++ b/index.html
@@ -191,19 +191,19 @@
 <body>
   <nav>
     <div class="container nav-content">
-      <div class="logo">我的网站</div>
+      <div class="logo">My Website</div>
       <ul class="nav-links">
-        <li><a href="#home">首页</a></li>
-        <li><a href="#features">特性</a></li>
-        <li><a href="#about">关于</a></li>
-        <li><a href="#contact">联系</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </nav>
 
   <section class="hero" id="home">
     <div class="container">
-      <h1>Welcome to my GitHubPage</h1>
+      <h1>Welcome to My GitHub Page</h1>
       <p>A modern, beautiful, and responsive static page example</p>
       <a href="#features" class="btn">Learn More</a>
     </div>
