--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div class="container nav-content">
       <div class="logo">My Website</div>
       <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
+        <li><a href="https://max-du-1.github.io/my-education">My Education</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
